First implementation multishard search feature

--- a/deploy/tools/envs-validator/test/.env.base
+++ b/deploy/tools/envs-validator/test/.env.base
@@ -56,3 +56,5 @@ NEXT_PUBLIC_WEB3_DISABLE_ADD_TOKEN_TO_WALLET=false
 NEXT_PUBLIC_WEB3_WALLETS=['coinbase','metamask','token_pocket']
 NEXT_PUBLIC_SWAP_BUTTON_URL=uniswap
 NEXT_PUBLIC_VALIDATORS_CHAIN_TYPE=stability
+NEXT_PUBLIC_MULTI_SHARDS_PROXY_URL=http://localhost:8044
+NEXT_PUBLIC_SHARDS="[{'id': 's0', 'title': 'Shard 0', 'apiHost': 's0.example.io'}, {'id': 's1', 'title': 'Shard 1', 'apiHost': 's1.example.io'}]"
