--- a/.env.production
+++ b/.env.production
@@ -15,6 +15,7 @@ NEXT_PUBLIC_APP_PROTOCOL=http
 NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
 #NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+NEXT_PUBLIC_VIEWS_TX_HIDDEN_VIEWS=["blob_txs"]
 NEXT_PUBLIC_AD_BANNER_PROVIDER=none
 NEXT_PUBLIC_AD_TEXT_PROVIDER=none
 NEXT_PUBLIC_NETWORK_LOGO=https://protofire.github.io/quai-branding/quai_black.png
