--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@opentelemetry/sdk-node": "^0.45.0",
     "@opentelemetry/sdk-trace-node": "^1.18.0",
     "@opentelemetry/semantic-conventions": "^1.18.0",
+    "@rainbow-me/rainbowkit": "2",
     "@sentry/cli": "^2.21.2",
     "@sentry/react": "7.24.0",
     "@sentry/tracing": "7.24.0",
@@ -57,7 +58,7 @@
     "@tanstack/react-query-devtools": "^5.4.3",
     "@types/papaparse": "^5.3.5",
     "@types/react-scroll": "^1.8.4",
-    "@web3modal/wagmi": "3.5.0",
+    "@wagmi/core": "^2.8.2",
     "bignumber.js": "^9.1.0",
     "blo": "^1.1.1",
     "chakra-react-select": "^4.4.3",
@@ -99,8 +100,8 @@
     "react-scroll": "^1.8.7",
     "swagger-ui-react": "^5.9.0",
     "use-font-face-observer": "^1.2.1",
-    "viem": "1.20.1",
-    "wagmi": "1.4.12",
+    "viem": "2.10.2",
+    "wagmi": "2.8.2",
     "xss": "^1.0.14"
   },
   "devDependencies": {
