--- a/package.json
+++ b/package.json
@@ -88,9 +88,9 @@
     "pino-http": "^8.2.1",
     "pino-pretty": "^9.1.1",
     "qrcode": "^1.5.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.33.1",
     "react-identicons": "^1.2.5",
@@ -121,8 +121,8 @@
     "@types/node": "20.11.0",
     "@types/phoenix": "^1.5.4",
     "@types/qrcode": "^1.5.0",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/swagger-ui-react": "^4.11.0",
     "@types/ws": "^8.5.3",
