--- a/.env.production
+++ b/.env.production
@@ -4,8 +4,8 @@ NEXT_PUBLIC_STATS_API_HOST=http://130.250.44.4:8051
 NEXT_PUBLIC_NETWORK_NAME=Colosseum
 NEXT_PUBLIC_NETWORK_SHORT_NAME=Cyprus-1
 NEXT_PUBLIC_NETWORK_ID=9000
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Qi
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=QI
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Quai
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=QUAI
 #NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_API_BASE_PATH=/
 NEXT_PUBLIC_APP_HOST=130.250.44.4:81
@@ -22,5 +22,5 @@ NEXT_PUBLIC_NETWORK_LOGO=https://protofire.github.io/quai-branding/quai_black.pn
 NEXT_PUBLIC_NETWORK_LOGO_DARK=https://protofire.github.io/quai-branding/quai_white.png
 NEXT_PUBLIC_NETWORK_ICON=https://protofire.github.io/quai-branding/quai_icon_black.png
 NEXT_PUBLIC_NETWORK_ICON_DARK=https://protofire.github.io/quai-branding/quai_icon_white.png
-NEXT_PUBLIC_MULTI_SHARDS_PROXY_URL=http://130.250.44.4:8044
+# NEXT_PUBLIC_MULTI_SHARDS_PROXY_URL=http://130.250.44.4:8044
 NEXT_PUBLIC_SHARDS="[{'id': 'cyprus1', 'addressesFrom': '0x00', 'region': 'Cyprus', 'title': 'Cyprus 1', 'apiHost': '130.250.44.4:3999', 'statsHost': '130.250.44.4:8051', 'chain': {'id': '9000','name': 'QUAI Cyprus','shortName': 'quai_cyprus','rpcUrl': 'https://cyprus1.colosseum.quaiscan.io/'}},{'id': 'cyprus2', 'addressesFrom': '0x1e', 'region': 'Cyprus', 'title': 'Cyprus 2', 'apiHost': '130.250.44.4:4002','statsHost': '130.250.44.4:8051','chain': {'id': '9000','name': 'QUAI Cuprus','shortName': 'quai_cyprus','rpcUrl': 'https://cyprus2.colosseum.quaiscan.io/'}},{'id': 'cyprus3', 'addressesFrom': '0x3b', 'region': 'Cyprus', 'title': 'Cyprus 3', 'apiHost': '130.250.44.4:4003','statsHost': '130.250.44.4:8051','chain': {'id': '9000','name': 'QUAI Cuprus','shortName': 'quai_cyprus','rpcUrl': 'https://cyprus3.colosseum.quaiscan.io/'}}]"
