upd build-push.yml
(cherry picked from commit d0f8f27939947a96bd2b0a743e8369831929c053)

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - 'staging-goldenage'
+      - 'staging'
 
 name: Docker build and push
 
@@ -29,5 +29,5 @@ jobs:
 
       - name: Build and push
         run: |
-          docker build -t ${{ env.IMAGE_REPOSITORY }}:${{ env.IMAGE_TAG }} -t ${{ env.IMAGE_REPOSITORY }}:latest --build-arg GIT_COMMIT_SHA=${{ env.IMAGE_TAG }} --build-arg GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }} -f Dockerfile .
+          docker build -t ${{ env.IMAGE_REPOSITORY }}:staging-${{ env.IMAGE_TAG }} -t ${{ env.IMAGE_REPOSITORY }}:staging-latest --build-arg GIT_COMMIT_SHA=${{ env.IMAGE_TAG }} --build-arg GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }} -f Dockerfile .
           docker push ${{ env.IMAGE_REPOSITORY }} --all-tags
