--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "npm": "10.2.4"
   },
   "scripts": {
-    "dev": "./tools/scripts/dev.sh",
+    "dev": "patch-package && ./tools/scripts/dev.sh",
     "dev:preset": "./tools/scripts/dev.preset.sh",
-    "build": "next build",
+    "build": "patch-package && next build",
     "build:docker": "docker build --build-arg GIT_COMMIT_SHA=$(git rev-parse --short HEAD) --build-arg GIT_TAG=$(git describe --tags --abbrev=0) -t blockscout-frontend:local ./",
     "start": "next start",
     "start:docker:local": "docker run -p 3000:3000 --env-file .env.local blockscout-frontend:local",
@@ -83,6 +83,7 @@
     "nextjs-routes": "^1.0.8",
     "node-fetch": "^3.2.9",
     "papaparse": "^5.3.2",
+    "patch-package": "^8.0.0",
     "path-to-regexp": "^6.2.1",
     "phoenix": "^1.6.15",
     "pino-http": "^8.2.1",
